syntax = "proto3";

package communication;

///////////////////////////////////////////////////////////////////////////////
// Service de test de connection
///////////////////////////////////////////////////////////////////////////////

service Hello {
  // Fonction servant juste au test de connection
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string Name = 1;
}
message HelloReply {
    string Name = 1;
}

///////////////////////////////////////////////////////////////////////////////
// Service de gestion des NPC
///////////////////////////////////////////////////////////////////////////////

service Interactions {
  // Fonction transmettant un click du client au serveur
  rpc RightClick (RightClickRequest) returns (RightClickReply) {}

  // Fonction permettant au client de demander les mises à jour
  rpc AskUpdate (AskUpdateRequest) returns (AskUpdateReply) {}

}

// Messages liés à RightClick
message RightClickRequest {
    Coordinates Point = 1;
    repeated string EntitySelectionUUID = 2;
    string Target = 3;
}
message RightClickReply {
    map<string, RPCoordinates> Path = 1;
}
message RPCoordinates {
    repeated Coordinates Coord = 1;
}
message Coordinates {
    int32 X = 1;
    int32 Y = 2;
  }

// Message liés à MoveTo
message AskUpdateRequest {
    string Token = 1;
}
message AskUpdateReply {
    // Si vide rien
    repeated UpdateAsked Array = 1;
}

/*
type: list
    - 0: vide
    - 1: set case carte
        - type: int
            - 0: eau
            - 1: herbe
    - 2: set case ressource
        - type: int
            - 0: bois
            - 1: pierre
    - 3: entité - Update an entity
        - x: int - current x
        - y: int - current y
        - xDest: int - destination x
        - yDest: int - destination y
        - hp: int - current hp
        - hpMax: int - max hp
        - name: string - username

*/
message UpdateAsked {
    int32 Type = 1;
    string EntityUUID = 2;
    repeated Param Arg = 3;
}

message Param {
    string Key = 1;
    string Value = 2;
}
